--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
             </div>
             <div class="item2" style="margin-top:-16vh">
                 
-            <li><a href="#">Who We Are<div style="margin-left:-1.7vw;margin-top:0.2vh"><i class="arrow down"></i></div></a></li></div>
+            <li><a href="WhoWeAre.html">Who We Are<div style="margin-left:-1.7vw;margin-top:0.2vh"><i class="arrow down"></i></div></a></li></div>
             <div class="item3" style="margin-top:-16vh">
             <li><a href="#">Services<div style="margin-left:-4.3vw;margin-top:0.2vh"><i class="arrow down"></i></div></a></li></div>
             <div class="item4" style="margin-top:-16vh">
