--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" type="text/css" href="WhoWeAre.css">
         <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
+         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
                               
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
