--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -87,7 +87,7 @@
     </div> -->
     <div class="container4" style="display:flex">
         <div style="margin-left:0vw;margin-top:1vh">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture19.png" width="1900vw" height="821vh"></div>
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture19.png" width="1900vw" height="838vh"></div>
 
 <pre><div style="color:white;margin-left:-94.8vw;margin-top:10vh;font-size:2vw;font-family:'Times New Roman', Times, serif"><h1>Who We Are?</h1></div></pre>
 <pre><div style="color:white;margin-top:20vh;margin-left:-93.7vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
@@ -101,6 +101,10 @@
         <div class="Circle-2" style="margin-left:-14.2vw;padding-top:42vh">
             <div id="circle" style="width:23vw;height:46vh;-webkit-border-radius:23vw;-moz-border-radius:23vw;border-radius:23vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
             <div style="margin-top:52vh;margin-left:-15vw;font-size:10vw;color:black"><p>G</p></div>
+    </div>
+    <div class="container5">
+       <p>WHY To Choose Us</p>
+
     </div>
 
 <div class="container10" style="display:flex">
