some changes done

--- a/What We Do.html
+++ b/What We Do.html
@@ -90,21 +90,42 @@
    
        
    <div class="container2">
+    <div class="paragraph-2">
     <div class="pp1">
       <p>Mission is to bring the power<br> of Industrial Automation to<br> every Business
       </p>
     </div>
+    
     <div class="pp2">
-      <p>Envision Integrated Services function as a full stakeholder to business, offering a consulting-led approach<br> with an integrated portfolio of technology that encompass the entire Enterprise value chain. Our<br> Customer-centric Engagement Model defines how we do engage with you, offering specialized services<br> and solutions that meet the distinct needs of your business.
+      <p>Envision Integrated Services function as a full stakeholder to business, offering a consulting-led approach with an integrated portfolio of technology that encompass the entire Enterprise value chain. Our Customer-centric Engagement Model defines how we do engage with you, offering specialized services and solutions that meet the distinct needs of your business.
       </p>
     </div>
     <div class="pp3">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations. We empowered to provide<br> Customers a single window to industry specific solutions, route them to deliver their business goals and<br> drive technology led transformations.
+      <p>We empowered to provide Customers a single window to industry specific solutions, route them to deliver their business goals and drive technology led transformations. We empowered to provide Customers a single window to industry specific solutions, route them to deliver their business goals and drive technology led transformations.
       </p>
     </div>
     <div class="pp4">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations.
+      <p>We empowered to provide Customers a single window to industry specific solutions, route them to deliver their business goals and drive technology led transformations.
       </p>
     </div>
+    <div class="circle3"><p class="let1">11+ Years Of<br><p class="pp"> Experience</p>
+    </p></div>
+    <div class="img1">
+      <img src="env1.PNG">
+    </div>
+     <div class="img2">
+      <img src="env2.PNG" width="520%">
+     </div>
+     <div class="img3">
+      <img src="env3.PNG" width="750%">
+     </div>
    </div>
+  </div>
+  <div class="container3">
+    <div class="para">
+      <div class="treeimg">
+    <img src="pcp2.PNG" width="80%">
+  </div>
+  </div>
+  </div>
 </body>
