--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -3,7 +3,6 @@
         <link rel="stylesheet" type="text/css" href="WhoWeAre.css">
         <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
-         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
                               
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
@@ -88,23 +87,33 @@
     </div> -->
     <div class="container4" style="display:flex">
         <div style="margin-left:0vw;margin-top:1vh">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture19.png" width="1900vw" height="838vh"></div>
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture19.png" width="1903vw" height="838vh"></div>
 
 <pre><div style="color:white;margin-left:-94.8vw;margin-top:10vh;font-size:2vw;font-family:'Times New Roman', Times, serif"><h1>Who We Are?</h1></div></pre>
-<pre><div style="color:white;margin-top:20vh;margin-left:-93.7vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
+<pre><div style="color:white;margin-top:20vh;margin-left:-93.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
 <p>Must explain to you how all this mistaken idea of denouncing pleasure<br> and praising pain was born will give you a complete account of the<br> system pain can procure him some great pleasure expound the actual<br> of the master-builder of human happiness.</p></div></pre>
-<pre><div style="color:white;margin-top:40vh;margin-left:-93.4vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
+<pre><div style="color:white;margin-top:40vh;margin-left:-93.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
   <p>There anyone who loves or pursues or desires to obtain pain of itself,<br> because it pain but because occasionally circumstances occurs in<br> which toil and pain procures him some great pleasure take a trivial<br> example physical exercise.
     </p></div></pre>
-    <div class="Circle-1" style="margin-left:-28.4vw;padding-top:8vh">
+    <div class="Circle-1" style="margin-left:-28.4vw;padding-top:8.5vh">
         <div id="circle" style="width: 23vw;height:46vh;-webkit-border-radius:23vw;-moz-border-radius:23vw;border-radius:23vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
         <div style="margin-top:19vh;margin-left:-15vw;font-size:10vw;color:black"><p>E</p></div>
-        <div class="Circle-2" style="margin-left:-14.2vw;padding-top:42vh">
+        <div class="Circle-2" style="margin-left:-14.2vw;padding-top:43vh">
             <div id="circle" style="width:23vw;height:46vh;-webkit-border-radius:23vw;-moz-border-radius:23vw;border-radius:23vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
             <div style="margin-top:52vh;margin-left:-15vw;font-size:10vw;color:black"><p>G</p></div>
     </div>
     <div class="container5">
-       <p>WHY To Choose Us</p>
+        <div class="ppos2" style="font-weight:bold">
+       <p>WHY To Choose Us</p></div>
+
+    </div>
+    <div class="container6">
+        <div class="hpos4">
+        <h1>Reason For People Choose Us</h1></div>
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" style="height:70vh;width:40vw;margin-left:54vw;background-color:white;margin-top:-13vh">
+        <div class="ppos3">
+        <p> We collaborate and build on knowledge and expertise to<br> improve ourselves and the world we lives in. We collaborate<br> and build on knowledge and expertise to improve ourselves<br> and the world we lives in. We collaborate and build on<br> knowledge and expertise to improve ourselves and the world<br> we lives in. We collaborate and build on knowledge and<br> expertise to improve ourselves and the world we lives in.</p>
+</div>
 
     </div>
 
