some changes done

--- a/What We Do.html
+++ b/What We Do.html
@@ -42,12 +42,14 @@
          <!-- <div>
          <p style="text-align:center;font-size:17.5px;margin-right:1200px;justify-content:center;margin-top:20px;margin-bottom:-65px;width: 500px;margin-left: -120px;"><b>Envision</b>INTEGRATED SERVICES PVT.LTD<BR></p>
         </div> -->
+        <div class="lk">
         <div class="gg">
-        <i class="gg-home" ></i>
+       <a href="home.html" > <i class="gg-home"></i></a>
     </div>
+  </div>
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="HOME.html"><p  class="styo">What We Do</p></a></li><br>
+            <li><a style="color:blue;" href="#"><p  class="styo">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="ABOUT US.html"><p class="styo">Who We Are</p><i class=""></i></a>
@@ -124,7 +126,35 @@
   <div class="container3">
     <div class="para">
       <div class="treeimg">
-    <img src="pcp2.PNG" width="80%">
+   <a href="road.html" > <img src="pcp2.PNG" width="100%"></a>
+  </div>
+  </div>
+  <div class="footer">
+    
+    <div class="imgft">
+      <img src="EIS-logo.png" width="95%">
+    </div>
+    <div class="link">
+      <img src="instagramlogo.jpg" width="20%">
+    </div>
+    <div class="fc">
+      <img src="linkedinlogo.png" width="20%">
+    </div>
+    <div class="insta">
+      <img src="facebook.png" width="110%"> 
+    </div>
+     <div class="ggl">
+      <img src="googles.png" width="70%">
+    </div>
+    <div class="you">
+      <img src="youtube.png" width="5%" >
+    </div> 
+    <div class="fc">
+    <h1>&copy;</h1>
+  </div>
+    <div class="fp">
+    <p >2024 Envision Group. All Rights Reserved
+    </p>
   </div>
   </div>
   </div>
