some changes done

--- a/What We Do.html
+++ b/What We Do.html
@@ -124,38 +124,45 @@
    </div>
   </div>
   <div class="container3">
+   
     <div class="para">
       <div class="treeimg">
-   <a href="road.html" > <img src="pcp2.PNG" width="100%"></a>
+   <a href="road.html"><img src="pcp2.PNG" width="95%"></a>
+  </div>
+  </div>
+  <div class="rd">
+    <p>Our History/Journey
+    </p>
+  </div>
+  <div class="rd1">
+    <p>11+ Years – A Story of Transformation
+    </p>
   </div>
   </div>
   <div class="footer">
+    <div class="fc">
+        <h1>&copy;</h1>
+      </div>
+    <p class="fp">2024 Envision Group. All Rights Reserved
+  </p>  
+  <div class="eimg">
+    <img src="EIS-logo.png" width="100%" height="85%">
+  </div>
+  <div class="lin">
+    <img src="linkdin.png">
     
-    <div class="imgft">
-      <img src="EIS-logo.png" width="95%">
-    </div>
-    <div class="link">
-      <img src="instagramlogo.jpg" width="20%">
-    </div>
-    <div class="fc">
-      <img src="linkedinlogo.png" width="20%">
-    </div>
-    <div class="insta">
-      <img src="facebook.png" width="110%"> 
-    </div>
-     <div class="ggl">
-      <img src="googles.png" width="70%">
-    </div>
-    <div class="you">
-      <img src="youtube.png" width="5%" >
-    </div> 
-    <div class="fc">
-    <h1>&copy;</h1>
   </div>
-    <div class="fp">
-    <p >2024 Envision Group. All Rights Reserved
-    </p>
+  <div class="face">
+    <img src="facebook.png">
   </div>
+  <div class="inst">
+    <img src="instagram.png" width="6.8%">
+  </div>
+  <div class="gm">
+    <img src="googles.png" width="70%">
+  </div>
+  <div class="uu">
+    <img src="youtube.png" width="78%" height="86%">
   </div>
   </div>
 </body>
