--- a/road.html
+++ b/road.html
@@ -50,7 +50,7 @@
   </div>
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="#"><p  class="styo">What We Do</p></a></li><br>
+            <li><a style="color:blue;" href="What We Do.html"><p  class="styo">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="ABOUT US.html"><p class="styo">Who We Are</p><i class=""></i></a>
@@ -74,6 +74,46 @@
     </div>
     </div>
     <div class="container">
-
+        <div class="paragraph">
+            <div class="para1" >
+      <p>In 2024, we at Envision Group proudly celebrated Eleventh glorious years since<br> our inception. In this time, we’ve come a long way — from a family-run vegetable oil<br>manufacturer to a diversified global business and technology consulting leader.</p>
     </div>
+    <div class="para2">
+        <p>Today, the EG brand is an embodiment of customer-centric excellence, drive for sustainability and outstanding corporate citizenship. Our innovative solutions, lasting partnerships and commitment to our communities have helped us become one of the largest, most trusted IT services companies in the world, with more than 300 employees in over 4 countries. And our lasting values, the Spirit of EG, continue to guide our actions, fuel our passion for customers and drive positive change in our world.</p>
+    </div>
+    <div class="para3">
+        <p>Thank you to all the customers, partners, employees, and well-wishers who have made the past Eleventh years of growth and success possible. We look forward to many years of building a more resilient future together with you.
+        </p>
+    </div>
+</div>
+<div class="circle"><p class="let">E</p></div>
+<div class="circle2"><p class="lets">G</p></div>
+
+</div>
+<div class="footer">
+    <div class="fc">
+        <h1>&copy;</h1>
+      </div>
+    <p class="fp">2024 Envision Group. All Rights Reserved
+  </p>  
+  <div class="eimg">
+    <img src="EIS-logo.png" width="100%" height="85%">
+  </div>
+  <div class="lin">
+    <img src="linkdin.png">
+    
+  </div>
+  <div class="face">
+    <img src="facebook.png">
+  </div>
+  <div class="inst">
+    <img src="instagram.png" width="6.8%">
+  </div>
+  <div class="gm">
+    <img src="googles.png" width="70%">
+  </div>
+  <div class="uu">
+    <img src="youtube.png" width="78%" height="86%">
+  </div>
+  </div>
 </body>
