some changes done

--- a/road.html
+++ b/road.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div  class="divstyle">
@@ -12,10 +13,10 @@
           <li>
             <div class="rows" >
              <div class="cc">
-              <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers &#9679</p> </a>
+              <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers <p class="dot1">&#9679</p></p> </a>
             </div>
             <div class="ne">
-                <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events &#9679</p> </a>
+                <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events<p class="dot2">&#9679</p></p> </a>
             </div>
             <div class="In">
                 <a href="https://twitter.com/i/flow/login" target="_blank" style="text-decoration: none;color: black;"><p>Investors</p></a>
@@ -50,7 +51,7 @@
   </div>
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="What We Do.html"><p  class="styo">What We Do</p></a></li><br>
+            <li><a style="color:rgb(45, 45, 53);" href="What We Do.html"><p  class="styo">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="ABOUT US.html"><p class="styo">Who We Are</p><i class=""></i></a>
@@ -90,6 +91,103 @@
 <div class="circle2"><p class="lets">G</p></div>
 
 </div>
+<div class="container2">
+  <div class="bwpara">
+<div class="rdpara">
+  <p>Over 11th years in the making, and the story has just begun.
+  </p>
+</div>
+
+<div class="rimg1">
+  <img src="rd1.PNG" width="555px" height="280px">
+</div>
+<div class="vl"></div>
+<div class="rdpara1">
+  <p>Thank you to all the customers, partners, employees, and well-wishers who have made the past Eleventh years of growth and success possible. We look forward to many years of building a more resilient future together with you.Today, the  drive for sustainability and outstanding corporate citizenship.
+</p>
+</div>
+<div class="yer">
+  <p>2012-2014
+  </p>
+</div>
+</div>
+</div>
+
+<div class="container3">
+ <div class="co3">
+  <div class="vl1"></div>
+  <div class="rdpara2">
+    <p>Thank you to all the customers, partners, employees, and well-wishers who have made the past Eleventh years of growth and success possible. We look forward to many years of building a more resilient future together with you.Today, the  drive for sustainability and outstanding corporate citizenship.
+  </p>
+  </div>
+  <div class="yer1" >
+    <p>2016-2018
+    </p>
+  </div>
+ <div class="rimg2">
+  <img src="rd2.PNG" width="555px" height="280px">
+ </div>
+
+
+</div>
+
+
+</div>
+
+<div class="container4">
+ 
+  <div class="vl2"></div>
+  <div class="rdpara3">
+    <p>Thank you to all the customers, partners, employees, and well-wishers who have made the past Eleventh years of growth and success possible. We look forward to many years of building a more resilient future together with you.Today, the  drive for sustainability and outstanding corporate citizenship.
+  </p>
+  </div>
+  <div class="yer2" >
+    <p>2020-2022
+    </p>
+  </div>
+ <div class="rimg3">
+  <img src="rd3.PNG" width="555px" height="280px">
+ </div>
+
+
+
+
+
+</div>
+
+<div class="container5">
+ 
+  <div class="vl3"></div>
+  <div class="rdpara4">
+    <p>Thank you to all the customers, partners, employees, and well-wishers who have made the past Eleventh years of growth and success possible. We look forward to many years of building a more resilient future together with you.Today, the  drive for sustainability and outstanding corporate citizenship.
+  </p>
+  </div>
+  <div class="yer3" >
+    <p>2024 Onwards
+    </p>
+  </div>
+ <div class="rimg4">
+  <img src="rd4.PNG" width="555px" height="280px">
+ </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="footer">
     <div class="fc">
         <h1>&copy;</h1>
