--- a/home.html
+++ b/home.html
@@ -426,7 +426,7 @@ Bangalore, India - 560085</p></div>
 
         
             </div>
-<div class="container10" style="display:flex;color: black">
+<div class="container10" style="display:flex;background-color:white;height:4vh">
     <div style="padding-top:3vh">
         <img src="EIS-logo.png" style="margin-left:1.5vw;height:6vh;width:16vw;padding-top:8">  
     </div>
