--- a/What We Do.html
+++ b/What We Do.html
@@ -52,7 +52,7 @@
             <li><a style="color:blue;" href="#"><p  class="styo">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
-            <li><a  href="ABOUT US.html"><p class="styo">Who We Are</p><i class=""></i></a>
+            <li><a  href="WhoWeAre.html"><p class="styo">Who We Are</p><i class=""></i></a>
                 
           
         </li>
