--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -174,13 +174,14 @@
           <div class="numbertext">3 / 4</div>
           <div class="img3">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture23.png" style="width:15.5vw;height:15vh">
+          <div class="img5">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture23.png" style="width:15.5vw;height:15vh"></div>
           <div class="text2">Our vertical solutions equip with the tools need for Industry<br> to streamline processes, boost productivity, and thrive in a<br> digital landscape that unlock real value, making our business<br> more innovative and efficient than ever before.
 
 
 
         </div>
-        <div class="me2" style="margin-top:-805px;margin-left:800px;font-size:36px">
+        <div class="me2" style="margin-top:-250px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
         <div class="co2" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -191,7 +192,7 @@
       </div>
 
           <div class="meimge3">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw";height="650vh";>
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw" height="650vh">
           </div>
           <!-- <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -204,22 +205,24 @@
           <div class="numbertext">4/ 4</div>
           <div class="img4">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\mains.png" style="width:108.5vw;height: 81vh">
-          <div class="text3">Best practices in the industry, Adherence towards customer commitments & truthfulness.
+          <div class="img6">
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture24.png" style="width:11vw;height:18vh"></div>
+          <div class="text3">Best practices in the industry, Adherence towards customer<br> commitments & truthfulness.
 
 
         </div>
-        <div class="me3" style="margin-top:-800px">
+        <div class="me3" style="margin-top:-280px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
-        <div class="co3" style="margin-top:-20px">
+        <div class="co3" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
          <p>Value For Results</p>
        </div>
-       <div class="int3">
+       <div class="int3" style="margin-top:-41px;margin-left:1700px;font-size:36px">
         <p>High-Quality Results</p>
       </div>
 
           <div class="meimge4">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw";height="650vh";>
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture20.png" width="860vw" height="650vh">
           </div>
           <!-- <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -274,7 +277,26 @@ dots[slideIndex-1].className += " active";
        
     </script>
 </div>
-
+<div class="container3">
+  <div class="img7">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture25.png" width="951.3vw" height="808.7vh">
+  </div>
+  <div class="img8">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture26.png" width="951.3vw" height="808.7vh">
+  </div>
+  <div class="ppos2">
+  <p>“Great things in bu</p></div>
+  <div class="ppos3">
+  <p>siness are never done by</p></div>
+  <div class="ppos4">
+  <p>one person. They are</p></div>
+  <div class="ppos5">
+  <p>done by a Team of </p></div>
+  <div class="ppos6">
+  <p>peo</p></div>
+  <div class="ppos7">
+  <p>ple”.</p></div>
+</div>
 
 
 
