--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -296,6 +296,12 @@ dots[slideIndex-1].className += " active";
   <p>peo</p></div>
   <div class="ppos7">
   <p>ple”.</p></div>
+  <div class="rd">
+    <div class="ppos8">
+    <p>See</p></div>
+    <div class="ppos9">
+    <p>More</p></div>
+  </div>
 </div>
 
 
