some changes done

--- a/What We Do.html
+++ b/What We Do.html
@@ -60,7 +60,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a  href="INDESTRIAL ORIANTED.html"><p class="styo" style="">Services</p><i class=""></i></a>
+          <li><a  href="services.html"><p class="styo" style="">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
@@ -161,7 +161,7 @@
   </div>
   <div class="circle5">
     
-      <div  class="arrow"><a href="dummy.html" style="text-decoration:none">&#8680</a></div>
+      <div  class="arrow"><a href="road.html" style="text-decoration:none">&#8680</a></div>
   </div>
   <div class="container5">
 
@@ -257,7 +257,7 @@
         </p>
       </div>
       <div class="engl">
-    <p>Envision Group - Telangana, Hyderabad </p>
+    <strong>Envision Group - Telangana, Hyderabad </strong>
       </div>
       <div class="manjira">
         <p>#913, Manjeera Trinity Corporate, </p>
@@ -271,7 +271,7 @@
         </p>
       </div>
    </div>
- </div>
+    </div>
  
   
 
