--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -24,13 +24,13 @@
             <div class="In">
                 <a href="https://twitter.com/i/flow/login" target="_blank" style="text-decoration: none;color: black;"><p>Investors</p></a>
             </div>
-            <div class="globelogo">
+            <div class="globelogo" style="margin-left: 1620px;margin-top: -30.5px;font-size: 32px;">
                 <i class='fa fa-globe'></i>
             </div>
-            <div class="world">
+            <div class="world" style="margin-left: 1655px;margin-top: -35px;font-size: 30px;">
                 <a href="#" target="_blank" style="text-decoration: none;color: rgb(17, 191, 249);"><p>Worldwide</p></a>
             </div>
-            <div class="searchlogo">
+            <div class="searchlogo" style="margin-left: 1800px;margin-top: -32px;font-size: 27px">
                 <i class="fa fa-search"></i>
             </div>
                 </div>  
@@ -42,7 +42,7 @@
         <div class="menu-header">
             <div class="text">
          <div class="enimg">
-          <img src="EIS-logo.png"  width="9%" height="50px" >
+          <img src="EIS-logo.png"  width="15%" height="50px" >
          </div>
          <!-- <div>
          <p style="text-align:center;font-size:17.5px;margin-right:1200px;justify-content:center;margin-top:20px;margin-bottom:-65px;width: 500px;margin-left: -120px;"><b>Envision</b>INTEGRATED SERVICES PVT.LTD<BR></p>
@@ -57,7 +57,7 @@
             <li><a  href="What We Do.html"><p  class="styo">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
-            <li><a  href="ABOUT US.html"><p class="styo">Who We Are</p><i class=""></i></a>
+            <li><a style="color:blue;" href="WhoWeAre.html"><p class="styo">Who We Are</p><i class=""></i></a>
                
          
         </li>
@@ -88,10 +88,10 @@
   <p>There anyone who loves or pursues or desires to obtain pain of itself,<br> because it pain but because occasionally circumstances occurs in<br> which toil and pain procures him some great pleasure take a trivial<br> example physical exercise.
     </p></div></pre>
     <div class="Circle-1" style="margin-left:-28.4vw;padding-top:19vh">
-        <div id="circle" style="width: 22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+        <div id="circle" style="width: 22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
         <div style="margin-top:26vh;margin-left:-15vw;font-size:10vw;color:black"><p>E</p></div>
         <div class="Circle-2" style="margin-left:-13.2vw;padding-top:51.7vh">
-            <div id="circle" style="width:22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+            <div id="circle" style="width:22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
             <div style="margin-top:60vh;margin-left:-15vw;font-size:10vw;color:black"><p>G</p></div>     
 
           </div>
