--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                   <p>Careers <p class="dot1" style="margin-left:85px;font-size:10px;margin-top:-43px">&#9679</p></p> 
                 </div>
                 <div class="ne">
-                   <p>News & Events<p class="dot2" style="margin-left:170px;font-size:10px;margin-top:-43px">&#9679</p></p> 
+                   <p>News & Events<p class="dot2" style="margin-left:168px;font-size:10px;margin-top:-43px">&#9679</p></p> 
                 </div>
                 <div class="In">
                    <p>Investors</p>
@@ -50,7 +50,7 @@
                 </div> -->
                 <div class="lk">
                 <div class="gg">
-               <a style="color:black;" href="home.html" > <i class="gg-home"></i></a>
+               <a style="color:black;" href="home.html" > <i class="gg-home" style="color:blue;"></i></a>
             </div>
           </div>
                 <ul>
