--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -64,7 +64,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a style="color:rgb(45, 45, 53);" href="services.html"><p class="styo" style="">Services</p><i class=""></i></a>
+          <li><a style="color:rgb(45, 45, 53);" href="services1.html"><p class="styo" style="">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
