--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
                   </div>
                 <br><br><br><br>
                  <div class="ser">
-                  <li><a  href="INDESTRIAL ORIANTED.html"><p class="styo" >Services</p><i class=""></i></a>
+                  <li><a  href="services1.html"><p class="styo" >Services</p><i class=""></i></a>
                   </div>
                   </li>
                   <div class="Insights">
