--- a/What We Do.html
+++ b/What We Do.html
@@ -11,11 +11,13 @@
           <li>
             <div class="rows" >
              <div class="cc">
-              <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers &#9679</p> </a>
+              <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers</p> </a>
             </div>
+            <div class="dot1"><p style="margin-left:108px;font-size:10px;margin-top:-18px">&#9679</p></div>
             <div class="ne">
-                <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events &#9679</p> </a>
+                <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events</p> </a>
             </div>
+            <div class="dot2"><p style="margin-left:347px;font-size:10px;margin-top:-18px">&#9679</p></div>
             <div class="In">
                 <a href="https://twitter.com/i/flow/login" target="_blank" style="text-decoration: none;color: black;"><p>Investors</p></a>
             </div>
@@ -59,7 +61,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a  href="INDESTRIAL ORIANTED.html"><p class="styo" style="">Services</p><i class=""></i></a>
+          <li><a  href="services1.html"><p class="styo" style="">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
