--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -15,12 +15,14 @@
         <ul>
           <li>
             <div class="rows" >
-             <div class="cc">
-              <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers <p class="dot1">&#9679</p></p> </a>
-            </div>
-            <div class="ne">
-                <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events<p class="dot2">&#9679</p></p> </a>
-            </div>
+              <div class="cc">
+                <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers</p> </a>
+              </div>
+              <div class="dot1"><p style="margin-left:23.9px;font-size:10px;margin-top:-18.1px">&#9679</p></div>
+              <div class="ne">
+                  <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events</p> </a>
+              </div>
+              <div class="dot2"><p style="margin-left:182px;font-size:10px;margin-top:-18.1px">&#9679</p></div>
             <div class="In">
                 <a href="https://twitter.com/i/flow/login" target="_blank" style="text-decoration: none;color: black;"><p>Investors</p></a>
             </div>
