--- a/home.html
+++ b/home.html
@@ -7,16 +7,18 @@
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
     <body>
-        <div  class="divstyle">
+        <div  class="divstyle" style="height:70px">
             <ul>
               
                 <div class="rows" >
-                 <div class="cc">
-                  <p>Careers <p class="dot1" style="margin-left:85px;font-size:10px;margin-top:-43px">&#9679</p></p> 
-                </div>
-                <div class="ne">
-                   <p>News & Events<p class="dot2" style="margin-left:168px;font-size:10px;margin-top:-43px">&#9679</p></p> 
-                </div>
+                    <div class="cc">
+                        <a href="https://in.linkedin.com/" target="_blank" style="text-decoration: none;color: black;"> <p>Careers</p> </a>
+                      </div>
+                      <div class="dot1"><p style="margin-left:68px;font-size:10px;margin-top:-43px">&#9679</p></div>
+                      <div class="ne">
+                          <a href="https://www.facebook.com/" target="_blank" style="text-decoration: none;color: black;"> <p>News & Events</p> </a>
+                      </div>
+                      <div class="dot2"><p style="margin-left:307px;font-size:10px;margin-top:-43px">&#9679</p></div>
                 <div class="In">
                    <p>Investors</p>
                 </div>
