--- a/services1.html
+++ b/services1.html
@@ -63,7 +63,7 @@
           </div>
         <br><br><br><br>
          <div class="ser">
-          <li><a style="color:rgb(45, 45, 53);" href="services1.html"><p class="styo" style="">Services</p><i class=""></i></a>
+          <li><a style="color:rgb(45, 45, 53);" href="services1.html"><p class="styo" style="color:blue;">Services</p><i class=""></i></a>
           </div>
           </li>
           <div class="Insights">
@@ -107,8 +107,8 @@
         <div class="mySlides fade1">
           <div class="numbertext">1 / 3</div>
           <div class="img1">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture31.PNG" style="width:100%;height: 90vh;z-index: 1;display: flex;">
-          <div class="text1">Envision IS delivers Mechanical engineering services across industry verticals in the major areas like Create, Validate, Build and Support by provides domain specific expertise to its clients. With its state-of-the-art infrastructure and latest engineering tools have the experience to provide future focused innovations in the mechanical engineering domain and also the cost effective solutions offered by the company make it a one-stop solutions provider in the Mechanical Engineering Domain. Envision Integrated Services understands the complexities of manufacturing and provides Manufacturing Engineering Solutions that enable companies.
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture31.PNG" style="width:100%;height: 88vh;z-index: 1;display: flex;">
+          <div class="text1">Envision IS delivers Mechanical engineering services across<br> industry verticals in the major areas like Create, Validate, Build<br> and Support by provides domain specific expertise to its clients.<br> With its state-of-the-art infrastructure and latest engineering<br> tools have the experience to provide future focused innovations<br> in the mechanical engineering domain and also the cost<br> effective solutions offered by the company make it a one-stop<br> solutions provider in the Mechanical Engineering Domain.<br> Envision Integrated Services understands the complexities of<br> manufacturing and provides Manufacturing Engineering<br> Solutions that enable companies.
         </div>
         <div class="me">
             <p>Mechanical Services</p>
@@ -121,7 +121,7 @@
       </div>
 
           <div class="meimge">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture28.PNG" width="80%";height="70%";>
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture28.PNG">
           </div>
           <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -134,7 +134,7 @@
           <div class="numbertext">2 / 3</div>
           <div class="img2">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture31.PNG" style="width:100%;height:90vh ;">
-          <div class="text2">Our services are highly regarded by our clients. We provide the best quality services to organizations. We are able to serve our clients efficiently by maintained manpower requisition details and also keep track of all recruitment activities. We highly believe in client satisfaction and to ensure that we strive to provide consistent and improved performance. We ensure complete customer satisfaction by effectively using people, process and technology. solutions provider in the Mechanical Engineering Domain. Envision Integrated Services understands the complexities of manufacturing and provides Manufacturing Engineering Solutions that enable companies.
+          <div class="text2">Our services are highly regarded by our clients. We provide the<br> best quality services to organizations. We are able to serve our<br> clients efficiently by maintained manpower requisition details<br> and also keep track of all recruitment activities. We highly<br> believe in client satisfaction and to ensure that we strive to<br> provide consistent and improved performance. We ensure<br> complete customer satisfaction by effectively using people,<br> process and technology. solutions provider in the Mechanical<br> Engineering Domain. Envision Integrated Services understands<br> the complexities of manufacturing and provides Manufacturing<br> Engineering Solutions that enable companies.
 
         </div>
         <div class="me2">
@@ -148,7 +148,7 @@
       </div>
 
           <div class="meimge2">
-            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture29.PNG" width="80%";height="70%";>
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture29.PNG">
           </div>
           <div class="rd">
             <p>Read More<i class='fas fa-book-open'></i>
@@ -161,7 +161,7 @@
           <div class="numbertext">3 / 3</div>
           <div class="img3">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture31.PNG" style="width:100%;height: 90vh;">
-          <div class="text3">Our services are highly regarded by our clients. We provide the best quality services to organizations. We are able to serve our clients efficiently by maintained manpower requisition details and also keep track of all recruitment activities. We highly believe in client satisfaction and to ensure that we strive to provide consistent and improved performance. We ensure complete customer satisfaction by effectively using people, process and technology. solutions provider in the Mechanical Engineering Domain. Envision Integrated Services understands the complexities of manufacturing and provides Manufacturing Engineering Solutions that enable companies.
+          <div class="text3">Our services are highly regarded by our clients. We provide the<br> best quality services to organizations. We are able to serve our<br> clients efficiently by maintained manpower requisition details<br> and also keep track of all recruitment activities. We highly<br> believe in client satisfaction and to ensure that we strive to<br> provide consistent and improved performance. We ensure<br> complete customer satisfaction by effectively using people,<br> process and technology. solutions provider in the Mechanical<br> Engineering Domain. Envision Integrated Services understands<br> the complexities of manufacturing and provides Manufacturing<br> Engineering Solutions that enable companies.
 
         </div>
         <div class="me3">
